Add footer to page
Finished basic layout for footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       </ul>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>Copyright © The Odin Project 2023</footer>
   </body>
 </html>
