Add first content block to the page
I added the first block to the page which shows some information and
an image.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <li class="link"><a href="#">Contact us</a></li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <div class="title">
+        <div class="intro-text">
+          <h1>This website is awesome</h1>
+          <p>
+            This paragraph contains important informations about this page and
+            the company behind it. This information may be useful for the
+            customer.
+          </p>
+          <button>Sign in</button>
+        </div>
+        <img src="./img/header-img.jpg" alt="Placeholder image" />
+      </div>
+    </main>
     <footer>Copyright © The Odin Project 2023</footer>
   </body>
 </html>
