--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </ul>
     </header>
     <main>
-      <div class="title">
-        <div class="intro-text">
-          <h1>This website is awesome</h1>
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Placeholder headline</h1>
           <p>
             This paragraph contains important informations about this page and
             the company behind it. This information may be useful for the
@@ -26,7 +26,8 @@
           </p>
           <button>Sign in</button>
         </div>
-        <img src="./img/header-img.jpg" alt="Placeholder image" />
+        <img src="#" alt="Placeholder image" />
+      </div>
       </div>
     </main>
     <footer>Copyright © The Odin Project 2023</footer>
