Add image section
I added the image section to the page. It contains five placeholders
for images, which zoom in when hovered over.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
         </div>
         <img src="#" alt="Placeholder image" />
       </div>
+      <div class="info">
+        <h2>Random section title</h2>
+        <div class="images">
+          <figure>
+            <img src="#" alt="Placeholder image" />
+            <figcaption>Information</figcaption>
+          </figure>
+          <figure>
+            <img src="#" alt="Placeholder image" />
+            <figcaption>Information</figcaption>
+          </figure>
+          <figure>
+            <img src="#" alt="Placeholder image" />
+            <figcaption>Information</figcaption>
+          </figure>
+          <figure>
+            <img src="#" alt="Placeholder image" />
+            <figcaption>Information</figcaption>
+          </figure>
+          <figure>
+            <img src="#" alt="Placeholder image" />
+            <figcaption>Information</figcaption>
+          </figure>
+        </div>
       </div>
     </main>
     <footer>Copyright © The Odin Project 2023</footer>
