Add quote section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </header>
     <main>
-      <div class="hero">
+      <section class="hero">
         <div class="hero-text">
           <h1>Placeholder headline</h1>
           <p>
@@ -27,8 +27,8 @@
           <button>Sign in</button>
         </div>
         <img src="#" alt="Placeholder image" />
-      </div>
-      <div class="info">
+      </section>
+      <section class="info">
         <h2>Random section title</h2>
         <div class="images">
           <figure>
@@ -52,7 +52,18 @@
             <figcaption>Information</figcaption>
           </figure>
         </div>
-      </div>
+      </section>
+      <section class="quote">
+        <div class="quote-paragraph">
+          <p class="quote-text">
+            This is a random quote of someone who has someting to do with this
+            website. It may be by the CEO or by a satisfied customer. Anyways,
+            like most quotes on company webites this is just here to fill some
+            space. Most people won't read this anyway.
+          </p>
+          <p class="quote-author">- Random inspirational person</p>
+        </div>
+      </section>
     </main>
     <footer>Copyright © The Odin Project 2023</footer>
   </body>
