Add final signup panel

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             the company behind it. This information may be useful for the
             customer.
           </p>
-          <button>Sign in</button>
+          <button>Sign Up</button>
         </div>
         <img src="#" alt="Placeholder image" />
       </section>
@@ -62,6 +62,18 @@
             space. Most people won't read this anyway.
           </p>
           <p class="quote-author">- Random inspirational person</p>
+        </div>
+      </section>
+      <section class="signup">
+        <div class="signup-banner">
+          <div class="signup-text">
+            <h3>Interested? Sign up!</h3>
+            <p>
+              Support the development of our product! Sign up by clicking on the
+              button!
+            </p>
+          </div>
+          <button>Sign Up</button>
         </div>
       </section>
     </main>
