Edit footer text

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
         </div>
       </section>
     </main>
-    <footer>Copyright © The Odin Project 2023</footer>
+    <footer>Copyright © Thomsn1337, 2023</footer>
   </body>
 </html>
